# advent-of-code

./: .gitignore  README.md  get_input.py
2016/: Day03.rakumod  Day04.rakumod  Day05.rakumod  Day06.rakumod  Day07.rakumod  Day08.rakumod  Day09.rakumod  Day10.rakumod  Day11.rakumod  Day12.rakumod  day01.jl  day02.jl  day03.raku  run.raku
2016/py/: pyproject.toml
2016/py/src/aoc2016/: __init__.py  day13.py  day14.py  day15.py  day16.py  day17.py  run.py  utils.py
2016/py/tests/: day13_test.py  day14_test.py  day15_test.py  day16_test.py  day17_test.py
2016/t/: answers.rakutest  day07.rakutest  day09.rakutest  day11.rakutest  day12.rakutest
2017/: day5.pl  mix.exs
2017/days1-5/: .gitignore  README.md
2017/days6-/: Cargo.toml  day23-2.cpp
2017/lib/: cli.ex  day1.ex  day2.ex  day3.ex
2017/test/: day1_test.exs  day2_test.exs  day3_test.exs  day5_test.exs
2018/day1/: Cargo.toml  input.txt
2018/day15/: ex1-1.txt  ex1-2.txt  ex2-1.txt  ex2-2.txt  ex3-2.txt  ex3-3.txt  ex3-4.txt  ex4-23.txt  ex4-47.txt  ex5-37.txt  ex6-46.txt  ex7-35.txt  ex8-54.txt  ex9-20.txt  input.txt
2018/day17/: input.txt
2018/day18/: input.txt
2018/day2/: Cargo.toml
2018/day20/: Cargo.toml
2018/day22/: Cargo.toml
2018/day23/: input.txt
2018/day24/: Cargo.toml  input.txt
2018/day25/: Cargo.toml  example.txt  input.txt
2018/day3/: Cargo.toml
2018/day4/: Cargo.toml  input.txt
2018/day5/: Cargo.toml
2018/day6/: Cargo.toml
2018/day7/: Cargo.toml
2018/day8/: Cargo.toml  input.txt
2018/day9/: Cargo.toml
2019/: Cargo.toml  README.md  rustfmt.toml
2019/input/2019/: day1.txt  day11.txt  day12.txt  day13.txt  day14.txt  day16.txt  day20.txt  day21.txt  day22.txt  day23.txt  day25.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
2019/src/: day1.rs  day10.rs  day11.rs  day12.pest  day12.rs  day13.rs  day14.pest  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.pest  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.pest  day4.rs  day5.rs  day6.pest  day6.rs  day7.rs  day8.pest  day8.rs  day9.rs  intcode.rs  lib.rs  main.rs  video.rs
2020/: .clang-format  .gitignore  CMakeLists.txt  README.md  SynchronizerNbpRegular-Zgpz.readme.txt  boiler.cpp  build.sh  common.cpp  common.h  concepts  ctre.hpp  day.html  day00.cpp  day00.data  day00.html  day00.js  day00.wasm  day1.cpp  day1.data  day1.html  day1.js  day1.wasm  day10.cpp  day10.data  day10.html  day10.js  day10.wasm  day11.cpp  day11.data  day11.html  day11.js  day11.wasm  day12.cpp  day12.data  day12.html  day12.js  day12.wasm  day13.cpp  day13.data  day13.html  (+119 more)
2020/answers/: day1.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day2.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
2020/cmake/: CMakeRC.cmake
2020/dist-info/: day1.js  day1.wasm  day10.js  day11.html  day11.js  day12.data  day12.html  day12.js  day12.wasm  day13.js  day2.js  day3.data  day3.js  day3.wasm  day4.js  day5.data  day5.html  day5.js  day6.js  day6.wasm  day7.js  day8.js  day9.data  day9.js  day9.wasm
2020/dist-sw/: day1.js  day10.html  day10.js  day11.js  day12.js  day12.wasm  day13.data  day13.html  day13.js  day2.data  day2.js  day3.html  day3.js  day3.wasm  day4.js  day5.js  day6.data  day6.js  day7.js  day7.wasm  day8.data  day8.js  day8.wasm  day9.js  main.css  main.js  vendors~main.css.map  vendors~main.js  vendors~main.js.map
2020/input/2020/: day1.txt  day10.txt  day12.txt  day13.txt  day20.txt  day22.txt  day24.txt  day25.txt  day6.txt  day9.txt
2020/web/: App.vue  main.js  variables.scss
2021/: .eslintrc.js  .gitignore  24.cpp  README.md  a.out  day12.dot  package-lock.json  package.json  quasar.conf.js  quasar.extensions.json  run.ts  run25.ts  tsconfig.json
2021/solutions/: day1.ts  day10.ts  day11.ts  day12.ts  day13.ts  day14.ts  day15.ts  day16.ts  day17.ts  day18.ts  day19.ts  day2.ts  day20.ts  day21.ts  day22.ts  day25.ts  day3.ts  day4.ts  day5.ts  day6.ts  day7.ts  day8.ts  day9.ts  util.ts
2022/: Manifest.toml  Project.toml  day01.jl  day02.jl  day03.jl  day04.jl  day05.jl  day06.jl  day07.jl  day08.jl  day09.jl  day10.jl  day11.jl  day12.jl  day13.jl  day14.jl  day15.jl  day16.jl  day17.jl  day18.jl  day19.jl  day20.jl  day21.hs  day21.jl  day21.pl  day22.jl  day23.jl  day24.jl  day25.jl  utils.jl
2023/: .gitignore  Astar.rakumod  Day01.rakumod  Day01x.rakumod  Day03.rakumod  Day04.rakumod  Day05.rakumod  Day06.pl  Day07.rakumod  Day09.rakumod  Day10.rakumod  Day12.rakumod  Day13.rakumod  Day14.rakumod  Day15.rakumod  Day16.rakumod  Day17.rakumod  Day18.rakumod  Day19.rakumod  Day20.rakumod  Day21.rakumod  Day22.rakumod  Day23.rakumod  Day24.rakumod  Day25.rakumod  DayEleven.rakumod  Meal02.rakumod  New.rakumod  README.md  day24p2.py  run.raku  День08.rakumod
2023/t/: day01.rakutest  day03.rakutest  day04.rakutest  day05.rakutest  day08.rakutest  day09.rakutest  day10.rakutest  day11.rakutest  day12.rakutest  day13.rakutest  day14.rakutest  day15.rakutest  day16.rakutest  day17.rakutest  day18.rakutest  day19.rakutest  day20.rakutest  day21.rakutest  day22.rakutest  (+4 more)
2024/: .editorconfig  .gitignore  Cargo.toml  rustfmt.toml
2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
2025/: .gitignore  README.md  pyproject.toml
2025/day1rs/: Cargo.toml  pyproject.toml
2025/day1rs/src/: lib.rs
2025/src/aoc2025/: __init__.py  day1.py  day10.py  day11.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  dayX.py  run.py
2025/tests/: day10_test.py  day11_test.py  day12_test.py  day1_test.py  day2_test.py  day3_test.py  day4_test.py  day5_test.py  day6_test.py  day7_test.py  day8_test.py  day9_test.py  dayX_test.py
(+128 files in other folders)
