[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Alexey Sokolov <sokolov@google.com>"]
edition = "2018"

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"
gif = { version = "0.10.3", optional = true }
quick-error = "1.2.2"
enum-iterator = "0.5.0"

[features]
video = ["gif"]
#default = ["video"]
