[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Alexey Sokolov <sokolov@google.com>"]
edition = "2018"

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"
image = { version = "0.22.3", optional = true }
gif = { version = "0.10.3", optional = true }
quick-error = "1.2.2"
enum-iterator = "0.5.0"
rayon = "1.2.1"
gen-iter = { git = "https://github.com/sumeet/gen-iter" }
pest = "2.1.2"
pest_derive = "2.1.0"
pathfinding = "2.0.0"

[features]
video = ["image", "gif"]
#default = ["video"]
