[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Alexey Sokolov <sokolov@google.com>"]
edition = "2018"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
image = { version = "0.22.3", optional = true }
gif = { version = "0.10.3", optional = true }
enum-iterator = "0.5.0"
rayon = "1.2.1"
gen-iter = { git = "https://github.com/sumeet/gen-iter" }
pest = "2.1.2"
pest_derive = "2.1.0"
crossbeam = "0.7.3"
pathfinding = "2.0.0"
permute = "0.1.0"
fallible-iterator = "0.2.0"
itertools = "0.8.2"
anyhow = "1.0.25"
bytecount = "0.6.0"
num = "0.2.0"
num_enum = "0.4.2"
linked-hash-map = "0.5.3"
fnv = "1.0.6"
rustyline = "5.0.5"

[features]
intcode_video = ["image", "gif"]
video = ["image", "gif"]
#default = ["video"]
