cargo-features = ["edition2024"]

[package]
name = "aoc2024"
version = "0.1.0"
edition = "2024"

[features]
visualization = ["dep:bevy"]

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
bevy = { version = "0.15.0", features = ["dynamic_linking"], optional = true }
fnv = "1.0.7"
itertools = "0.13.0"
memoize = "0.4.2"
nom = "7.1.3"
petgraph = "0.6.5"
strum = { version = "0.26", features = ["derive"] }

[[bin]]
name = "vis14"
required-features = ["visualization"]

# https://bevyengine.org/learn/quick-start/getting-started/setup/
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
