[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc2025"
version = "2025"
requires-python = ">=3.14"
dependencies = [
	"pytest >= 9.0",
	"numpy >= 2.3.5",
	"disjoint-set >= 0.8.0",
]

[tool.pytest]
addopts = ["--import-mode=importlib"]
strict = true

[project.scripts]
aoc2025 = "aoc2025:run.run"

[project.entry-points."aoc2025.day"]
# day1 moved to rust, but this version is still invocable via --variant=py
day1py = "aoc2025:day1.Solver"
day2 = "aoc2025:day2.Solvationist"
day3 = "aoc2025:day3.Solver"
day4 = "aoc2025:day4.Solver"
day5 = "aoc2025:day5.Solver"
day6 = "aoc2025:day6.Solver"
day7 = "aoc2025:day7.Solver"
day8 = "aoc2025:day8.Solver"
